--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,5 +51,22 @@ main{
 
     opacity: 40;
 }
+.form-control:focus {
+    border-color: #ffc107;
+    border-width: thin;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(255, 193, 7);
+}
+.animation-bounce{
+    animation: bounce 2s infinite linear;
+}
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-15px);}
+    60% {transform: translateY(-5px);}
+}
 
+#figure_perfil_img:hover{
+    background-color: #e6e6e6 !important;
+    opacity: 40% !important;
+}
 
